--- a/function-fun-times.html
+++ b/function-fun-times.html
@@ -4,6 +4,6 @@
     <title>Function Fun Times</title>
 </head>
 <body>
-<script src="js/function-fun.js"></script>
+<script src="js/functions-extra-stuff.js.js"></script>
 </body>
 </html>
