--- a/for_loops.html
+++ b/for_loops.html
@@ -5,6 +5,6 @@
     <title>Loopy Loops</title>
 </head>
 <body>
-<script src="js/loops.js"></script>
+<script src="js/for_loops.js"></script>
 </body>
 </html>
