--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,62 @@
     <title>Welcome</title>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<a id="top"></a>
+<h1>Welcome to Veridian Dynamics!</h1>
+<p>At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong>technology.</strong></p>
+<hr>
+<h2>Core Values</h2>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+<ol>
+<h2>Our Process</h2>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<h2>2020 Vision</h2>
+<ul>
+    <li>Become #1 in Technology</li>
+    <li>Increase Success by 20%</li>
+    <li>Increase Business by 30%</li>
+</ul>
+<hr>
+<h2>Company Vision</h2>
+<img src="./pictures_and_stuff/visorguy.jpeg" alt="Guy with a cool visor">
+<img src="./pictures_and_stuff/motherboard.jpeg" alt="Grey and yellow motherboard">
+<br>
+<img src="./pictures_and_stuff/basicallergies.jpeg" alt="Girl pointing at augmented reality stuff">
+<img src="./pictures_and_stuff/codinglooksfun.jpeg" alt="Person coding and video chatting">
+<br>
+<h2>Our Product</h2>
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <th>Premium</th>
+        <th>$499</th>
+        <th>Unlimited Support</th>
+    </tr>
+</table>
+<br>
+<p><em>All products come with our quality guarantee&trade;.</em></p>
+<br>
+<a href="#top">Go to the top of the page.</a>
 </body>
 </html>
