add code to complete exercise

--- a/welcome.html
+++ b/welcome.html
@@ -29,11 +29,14 @@
 </ul>
 <hr>
 <h2>Company Vision</h2>
-<img src="./pictures_and_stuff/visorguy.jpeg" alt="Guy with a cool visor">
-<img src="./pictures_and_stuff/motherboard.jpeg" alt="Grey and yellow motherboard">
+<style>.sampleimages {
+    max-width: 30%;
+}</style>
+<img src="./pictures_and_stuff/visorguy.jpeg" class="sampleimages" alt="Guy with a cool visor">
+<img src="./pictures_and_stuff/motherboard.jpeg" class="sampleimages" alt="Grey and yellow motherboard">
 <br>
-<img src="./pictures_and_stuff/basicallergies.jpeg" alt="Girl pointing at augmented reality stuff">
-<img src="./pictures_and_stuff/codinglooksfun.jpeg" alt="Person coding and video chatting">
+<img src="./pictures_and_stuff/basicallergies.jpeg" class="sampleimages" alt="Girl pointing at augmented reality stuff">
+<img src="./pictures_and_stuff/codinglooksfun.jpeg" class="sampleimages" alt="Person coding and video chatting">
 <br>
 <h2>Our Product</h2>
 <table>
