--- a/welcome.html
+++ b/welcome.html
@@ -6,64 +6,82 @@
 </head>
 <body>
 <a id="top"></a>
-<h1>Welcome to Veridian Dynamics!</h1>
-<p>At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong>technology.</strong></p>
-<hr>
-<h2>Core Values</h2>
-<ul>
-    <li>Competence</li>
-    <li>Involvement</li>
-    <li>Technology</li>
-</ul>
-<ol>
-<h2>Our Process</h2>
-    <li>Plan</li>
-    <li>Evaluate</li>
-    <li>Implement</li>
-</ol>
-<h2>2020 Vision</h2>
-<ul>
-    <li>Become #1 in Technology</li>
-    <li>Increase Success by 20%</li>
-    <li>Increase Business by 30%</li>
-</ul>
-<hr>
-<h2>Company Vision</h2>
-<style>.sampleimages {
-    max-width: 30%;
-}</style>
-<img src="./pictures_and_stuff/visorguy.jpeg" class="sampleimages" alt="Guy with a cool visor">
-<img src="./pictures_and_stuff/motherboard.jpeg" class="sampleimages" alt="Grey and yellow motherboard">
-<br>
-<img src="./pictures_and_stuff/basicallergies.jpeg" class="sampleimages" alt="Girl pointing at augmented reality stuff">
-<img src="./pictures_and_stuff/codinglooksfun.jpeg" class="sampleimages" alt="Person coding and video chatting">
-<br>
-<h2>Our Product</h2>
-<table>
-    <tr>
-        <th>Plan</th>
-        <th>Price</th>
-        <th>Features</th>
-    </tr>
-    <tr>
-        <td>Starter</td>
-        <td>$99</td>
-        <td>Base Technology</td>
-    </tr>
-    <tr>
-        <td>Advanced</td>
-        <td>$199</td>
-        <td>Additional Features</td>
-    </tr>
-    <tr>
-        <th>Premium</th>
-        <th>$499</th>
-        <th>Unlimited Support</th>
-    </tr>
-</table>
-<br>
-<p><em>All products come with our quality guarantee&trade;.</em></p>
-<br>
-<a href="#top">Go to the top of the page.</a>
+<section>
+    <h1>Welcome to Veridian Dynamics!</h1>
+    <p>At Veridian Dynamics <strong>we </strong>solve <em>your </em>problems with <strong>technology.</strong></p>
+</section>
+    <hr>
+<section>
+    <div>
+    <h2>Core Values</h2>
+    <ul>
+        <li>Competence</li>
+        <li>Involvement</li>
+        <li>Technology</li>
+    </ul>
+    </div>
+    <div>
+    <h2>Our Process</h2>
+    <ol>
+        <li>Plan</li>
+        <li>Evaluate</li>
+        <li>Implement</li>
+    </ol>
+    </div>
+    <div>
+    <h2>2020 Vision</h2>
+    <ul>
+        <li>Become #1 in Technology</li>
+        <li>Increase Success by 20%</li>
+        <li>Increase Business by 30%</li>
+    </ul>
+    </div>
+</section>
+    <hr>
+<section>
+    <h2>Company Vision</h2>
+    <style>.sampleimages {
+        max-width: 30%;
+    }</style>
+    <!---Hot linked because Casey did it first--->
+    <div>
+    <img src="https://images.pexels.com/photos/1719233/pexels-photo-1719233.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="sampleimages" alt="Guy with a cool visor">
+    <img src="https://images.pexels.com/photos/2777898/pexels-photo-2777898.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="sampleimages"
+         alt="Girl pointing at augmented reality stuff">
+    </div>
+    <div>
+    <img src="https://images.pexels.com/photos/2582937/pexels-photo-2582937.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="sampleimages" alt="Grey and yellow motherboard">
+    <img src="https://images.pexels.com/photos/3861964/pexels-photo-3861964.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="sampleimages" alt="Person coding and video chatting">
+    </div>
+</section>
+<section>
+    <h2>Our Product</h2>
+    <table>
+        <tr>
+            <th>Plan</th>
+            <th>Price</th>
+            <th>Features</th>
+        </tr>
+        <tr>
+            <td>Starter</td>
+            <td>$99</td>
+            <td>Base Technology</td>
+        </tr>
+        <tr>
+            <td>Advanced</td>
+            <td>$199</td>
+            <td>Additional Features</td>
+        </tr>
+        <tr>
+            <td>Premium</td>
+            <td>$499</td>
+            <td>Unlimited Support</td>
+        </tr>
+    </table>
+    <br>
+    <p><em>All products come with our quality guarantee&trade;.</em></p>
+    <br>
+    <a href="#top">Go to the top of the page.</a>
+</section>
 </body>
 </html>
