--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,6 @@
     <title>Welcome</title>
 </head>
 <body>
-<a id="top"></a>
 <section>
     <h1>Welcome to Veridian Dynamics!</h1>
     <p>At Veridian Dynamics <strong>we </strong>solve <em>your </em>problems with <strong>technology.</strong></p>
@@ -80,8 +79,7 @@
     </table>
     <br>
     <p><em>All products come with our quality guarantee&trade;.</em></p>
-    <br>
-    <a href="#top">Go to the top of the page.</a>
 </section>
+<h3><a href="#">Go to the top of the page.</a></h3>
 </body>
 </html>
