--- a/github.html
+++ b/github.html
@@ -8,34 +8,76 @@
 <style>.logos {
     max-height: 20px;
 }</style>
-<style>.members {
+<style>.member {
     max-height: 50px;
 }</style>
-<img src="pictures_and_stuff/githublogo.jpeg" class="logos" alt="github logo">
-<ul>
-    <li><a href="https://thiscatdoesnotexist.com">Pull Requests</a></li>
-    <li><a href="https://thiscatdoesnotexist.com">Issues</a></li>
-    <li><a href="https://thiscatdoesnotexist.com">Marketplace</a></li>
-    <li><a href="https://thiscatdoesnotexist.com">Explore</a></li>
-</ul>
-<br><br><br>
-<img src="pictures_and_stuff/codeuplogo.jpeg" class="logos" alt="Codeup logo">
-<h3>Codeup</h3>
-<ul>
-    <li><a href="https://thiscatdoesnotexist.com">Repos</a></li>
-    <li><a href="https://thispersondoesnotexist.com">People</a></li>
-    <li><a href="https://thiscatdoesnotexist.com">Marketplace</a></li>
-    <li><a href="https://thiscatdoesnotexist.com">Explore</a></li>
-</ul>
-<div>
-    <img src="https://www.gannett-cdn.com/-mm-/fd5c5b5393c72a785789f0cd5bd20acedd2d2804/c=0-350-2659-1850/local/-/media/Phoenix/BillGoodykoontz/2014/04/24//1398388295000-Homer-Simpson.jpg?width=1320&height=746&fit=crop&format=pjpg&auto=webp"
-             alt="homer simpson" class="members">
+<section>
+    <div>
+        <img src="pictures_and_stuff/githublogo.jpeg" class="logos" alt="github logo">
+    </div>
+    <div>
+        <ul>
+            <li><a href="https://thiscatdoesnotexist.com">Pull Requests</a></li>
+            <li><a href="https://thiscatdoesnotexist.com">Issues</a></li>
+            <li><a href="https://thiscatdoesnotexist.com">Marketplace</a></li>
+            <li><a href="https://thiscatdoesnotexist.com">Explore</a></li>
+        </ul>
+    </div>
+</section>
+<section>
+    <img src="pictures_and_stuff/codeuplogo.jpeg" class="logos" alt="Codeup logo">
+    <h3>Codeup</h3>
+    <ul>
+        <li><a href="https://thiscatdoesnotexist.com">Repos</a></li>
+        <li><a href="https://thispersondoesnotexist.com">People</a></li>
+        <li><a href="https://thiscatdoesnotexist.com">Marketplace</a></li>
+        <li><a href="https://thiscatdoesnotexist.com">Explore</a></li>
+    </ul>
+</section>
+<section>
+    <table>
+        <th>
+            <td>Codeup's Dev Team</td>
+        </th>
+        <tr>
+            <td><img src="https://upload.wikimedia.org/wikipedia/en/0/02/Homer_Simpson_2006.png" class='member'
+            alt="homer simspon"></td>
+            <td><a href="https://thispersondoesnotexist.com">Homer Simpson</a></td>
+        </tr>
+        <tr><td>Homer Simpson</td></tr>
+        <tr><td>Member</td></tr>
+        <tr><td>Quality Assurance Team</td></tr>
+        <tr>
+            <td><img src="https://upload.wikimedia.org/wikipedia/en/8/80/Moe_Szyslak.png" class="member"
+            alt="moe syzlak"></td>
+            <td><a href="https://thispersondoesnotexist.com">Moe Syzlak</a></td>
+        </tr>
+        <tr><td>Member</td></tr>
+        <tr><td>Drunkenness Assurance Team</td></tr>
+        <tr>
+            <td><img src="https://upload.wikimedia.org/wikipedia/en/a/a6/Bender_Rodriguez.png" class="member"
+            alt="bender bending rodriguez"></td>
+            <td><a href="https://thispersondoesnotexist.com">Bender Bending Rodriguez</a></td>
+        </tr>
+        <tr><td>Vice President</td></tr>
+        <tr><td>Human Relations Team</td></tr>
+    </table>
+</section>
+<section>
+    <div>
+    <p>&copy;3030 Github, Inc.</p>
+    </div>
+    <div>
+    <a href="https://nyan.cat">Terms </a>
+    <a href="https://nyan.cat">Privacy </a>
+    <a href="https://nyan.cat">Security </a>
+    <a href="https://nyan.cat">Status </a>
+    <a href="https://nyan.cat">Help </a>
     <br>
-    <img src="https://upload.wikimedia.org/wikipedia/en/8/80/Moe_Szyslak.png"
-         alt="moe syzlak" class="members">
-    <br>
-    <img src="https://upload.wikimedia.org/wikipedia/en/a/a6/Bender_Rodriguez.png"
-         alt="bender bending rodriguez" class="members">
-</div>
+    <a href="https://nyan.cat">Contact </a>
+    <a href="https://nyan.cat">API </a>
+    <a href="https://nyan.cat">Training </a>
+    </div>
+</section>
 </body>
 </html>
