fixed missing names of team members

--- a/github.html
+++ b/github.html
@@ -52,6 +52,7 @@
             alt="moe syzlak"></td>
             <td><a href="https://thispersondoesnotexist.com">Moe Syzlak</a></td>
         </tr>
+        <tr><td>Moe Syzlak</td></tr>
         <tr><td>Member</td></tr>
         <tr><td>Drunkenness Assurance Team</td></tr>
         <tr>
@@ -59,6 +60,7 @@
             alt="bender bending rodriguez"></td>
             <td><a href="https://thispersondoesnotexist.com">Bender Bending Rodriguez</a></td>
         </tr>
+        <tr><td>Bender Bending Rodriguez</td></tr>
         <tr><td>Vice President</td></tr>
         <tr><td>Human Relations Team</td></tr>
     </table>
