fixed style tag locations

--- a/github.html
+++ b/github.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Wannabe GitHub</title>
+    <style>.logos {
+        max-height: 20px;
+    }</style>
+    <style>.member {
+        max-height: 50px;
+    }</style>
 </head>
 <body>
-<style>.logos {
-    max-height: 20px;
-}</style>
-<style>.member {
-    max-height: 50px;
-}</style>
 <section>
     <div>
         <img src="pictures_and_stuff/githublogo.jpeg" class="logos" alt="github logo">
@@ -37,48 +37,66 @@
 <section>
     <table>
         <th>
-            <td>Codeup's Dev Team</td>
+        <td>Codeup's Dev Team</td>
         </th>
         <tr>
             <td><img src="https://upload.wikimedia.org/wikipedia/en/0/02/Homer_Simpson_2006.png" class='member'
-            alt="homer simspon"></td>
+                     alt="homer simspon"></td>
             <td><a href="https://thispersondoesnotexist.com">Homer Simpson</a></td>
         </tr>
-        <tr><td>Homer Simpson</td></tr>
-        <tr><td>Member</td></tr>
-        <tr><td>Quality Assurance Team</td></tr>
+        <tr>
+            <td>Homer Simpson</td>
+        </tr>
+        <tr>
+            <td>Member</td>
+        </tr>
+        <tr>
+            <td>Quality Assurance Team</td>
+        </tr>
         <tr>
             <td><img src="https://upload.wikimedia.org/wikipedia/en/8/80/Moe_Szyslak.png" class="member"
-            alt="moe syzlak"></td>
+                     alt="moe syzlak"></td>
             <td><a href="https://thispersondoesnotexist.com">Moe Syzlak</a></td>
         </tr>
-        <tr><td>Moe Syzlak</td></tr>
-        <tr><td>Member</td></tr>
-        <tr><td>Drunkenness Assurance Team</td></tr>
+        <tr>
+            <td>Moe Syzlak</td>
+        </tr>
+        <tr>
+            <td>Member</td>
+        </tr>
+        <tr>
+            <td>Drunkenness Assurance Team</td>
+        </tr>
         <tr>
             <td><img src="https://upload.wikimedia.org/wikipedia/en/a/a6/Bender_Rodriguez.png" class="member"
-            alt="bender bending rodriguez"></td>
+                     alt="bender bending rodriguez"></td>
             <td><a href="https://thispersondoesnotexist.com">Bender Bending Rodriguez</a></td>
         </tr>
-        <tr><td>Bender Bending Rodriguez</td></tr>
-        <tr><td>Vice President</td></tr>
-        <tr><td>Human Relations Team</td></tr>
+        <tr>
+            <td>Bender Bending Rodriguez</td>
+        </tr>
+        <tr>
+            <td>Vice President</td>
+        </tr>
+        <tr>
+            <td>Human Relations Team</td>
+        </tr>
     </table>
 </section>
 <section>
     <div>
-    <p>&copy;3030 Github, Inc.</p>
+        <p>&copy;3030 Github, Inc.</p>
     </div>
     <div>
-    <a href="https://nyan.cat">Terms </a>
-    <a href="https://nyan.cat">Privacy </a>
-    <a href="https://nyan.cat">Security </a>
-    <a href="https://nyan.cat">Status </a>
-    <a href="https://nyan.cat">Help </a>
-    <br>
-    <a href="https://nyan.cat">Contact </a>
-    <a href="https://nyan.cat">API </a>
-    <a href="https://nyan.cat">Training </a>
+        <a href="https://nyan.cat">Terms </a>
+        <a href="https://nyan.cat">Privacy </a>
+        <a href="https://nyan.cat">Security </a>
+        <a href="https://nyan.cat">Status </a>
+        <a href="https://nyan.cat">Help </a>
+        <br>
+        <a href="https://nyan.cat">Contact </a>
+        <a href="https://nyan.cat">API </a>
+        <a href="https://nyan.cat">Training </a>
     </div>
 </section>
 </body>
