--- a/HTML_JS_Testbed.html
+++ b/HTML_JS_Testbed.html
@@ -5,6 +5,6 @@
     <title>Testing</title>
 </head>
 <body>
-<script src="js/break_and_continue.js"></script>
+<script src="js/warmups.js"></script>
 </body>
 </html>
