fix placement of member links

--- a/github.html
+++ b/github.html
@@ -7,13 +7,13 @@
         max-height: 20px;
     }</style>
     <style>.member {
-        max-height: 50px;
+        max-height: 70px;
     }</style>
 </head>
 <body>
-<section>
+<nav>
     <div>
-        <img src="pictures_and_stuff/githublogo.jpeg" class="logos" alt="github logo">
+        <img src="pictures_and_stuff/githublogo.jpeg"  class="logos" alt="github logo">
     </div>
     <div>
         <ul>
@@ -23,26 +23,27 @@
             <li><a href="https://thiscatdoesnotexist.com">Explore</a></li>
         </ul>
     </div>
-</section>
-<section>
+</nav>
+<nav>
     <img src="pictures_and_stuff/codeuplogo.jpeg" class="logos" alt="Codeup logo">
     <h3>Codeup</h3>
     <ul>
         <li><a href="https://thiscatdoesnotexist.com">Repos</a></li>
         <li><a href="https://thispersondoesnotexist.com">People</a></li>
-        <li><a href="https://thiscatdoesnotexist.com">Marketplace</a></li>
-        <li><a href="https://thiscatdoesnotexist.com">Explore</a></li>
+        <li><a href="https://thiscatdoesnotexist.com">Teams</a></li>
+        <li><a href="https://thiscatdoesnotexist.com">Projects</a></li>
+        <li><a href="https://thiscatdoesnotexist.com">Settings</a></li>
     </ul>
-</section>
-<section>
+</nav>
+<main>
     <table>
         <th>
-        <td>Codeup's Dev Team</td>
+        <td>Codeup Springfield's Team</td>
         </th>
         <tr>
             <td><img src="https://upload.wikimedia.org/wikipedia/en/0/02/Homer_Simpson_2006.png" class='member'
-                     alt="homer simspon"></td>
-            <td><a href="https://thispersondoesnotexist.com">Homer Simpson</a></td>
+                     alt="homer simspon">
+            <a href="https://thispersondoesnotexist.com">Homer Simpson</a></td>
         </tr>
         <tr>
             <td>Homer Simpson</td>
@@ -55,8 +56,8 @@
         </tr>
         <tr>
             <td><img src="https://upload.wikimedia.org/wikipedia/en/8/80/Moe_Szyslak.png" class="member"
-                     alt="moe syzlak"></td>
-            <td><a href="https://thispersondoesnotexist.com">Moe Syzlak</a></td>
+                     alt="moe syzlak">
+            <a href="https://thispersondoesnotexist.com">Moe Syzlak</a></td>
         </tr>
         <tr>
             <td>Moe Syzlak</td>
@@ -69,8 +70,8 @@
         </tr>
         <tr>
             <td><img src="https://upload.wikimedia.org/wikipedia/en/a/a6/Bender_Rodriguez.png" class="member"
-                     alt="bender bending rodriguez"></td>
-            <td><a href="https://thispersondoesnotexist.com">Bender Bending Rodriguez</a></td>
+                     alt="bender bending rodriguez">
+            <a href="https://thispersondoesnotexist.com">Bender Bending Rodriguez</a></td>
         </tr>
         <tr>
             <td>Bender Bending Rodriguez</td>
@@ -82,8 +83,8 @@
             <td>Human Relations Team</td>
         </tr>
     </table>
-</section>
-<section>
+</main>
+<footer>
     <div>
         <p>&copy;3030 Github, Inc.</p>
     </div>
@@ -98,6 +99,6 @@
         <a href="https://nyan.cat">API </a>
         <a href="https://nyan.cat">Training </a>
     </div>
-</section>
+</footer>
 </body>
 </html>
