--- a/iterating_arrays_js.html
+++ b/iterating_arrays_js.html
@@ -5,7 +5,7 @@
     <title>Iterating Arrays</title>
 </head>
 <body>
-<script src="js/iteratiing.js"></script>
+<script src="js/iterating.js"></script>
 
 </body>
 </html>
