fixed spacing for email and password inputs

--- a/forms.html
+++ b/forms.html
@@ -16,12 +16,12 @@
 </nav>
 <form method="POST" action="https://request-inspector.glitch.me/">
     <div>
-        <label for="email-input">Veridian Dynamics Approved Email</label>
+        <label for="email-input">Veridian Dynamics Approved Email: </label>
         <input id="email-input" type="email" name="email" placeholder="serf@weownyou.com">
     </div>
 
     <div>
-        <label for="password-input">Password</label>
+        <label for="password-input">Password: </label>
         <input id="password-input" type="password" name="notpassword" placeholder="Please enter password">
     </div>
 
