fixed spacing for submit button and text in user bio section

--- a/forms.html
+++ b/forms.html
@@ -28,7 +28,7 @@
     <div>
         <hr>
         <h2>User Bio</h2>
-        <p>We already know everything about you, but please share what you think we don't know yet below</p>
+        <p>We already know everything about you,<br> but please share what you think we don't know yet below:</p>
         <textarea name="bio" cols="30" rows="10"
                   placeholder="Blood type, SSN, password reset information, etc..."></textarea>
     </div>
@@ -68,7 +68,7 @@
         <option value="Edge">Microsoft Edge</option>
         <option value="DuckDuckGo">DuckDuckGo</option>
     </select>
-
+    <br><br>
     <button type="submit">Submit</button>
 </form>
 </body>
