--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <section>
-    <h1>Welcome to Veridian Dynamics!</h1>
+    <h1 class="fancyheader">Welcome to Veridian Dynamics!</h1>
     <p>At Veridian Dynamics <strong>we </strong>solve <em>your </em>problems with <strong>technology.</strong></p>
 </section>
     <hr>
@@ -39,9 +40,6 @@
     <hr>
 <section>
     <h2>Company Vision</h2>
-    <style>.sampleimages {
-        max-width: 30%;
-    }</style>
     <!---Hot linked because Casey did it first--->
     <div>
     <img src="https://images.pexels.com/photos/1719233/pexels-photo-1719233.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="sampleimages" alt="Guy with a cool visor">
