removed embedded stylesheet and moved to forms-exercise-style.css

--- a/forms.html
+++ b/forms.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register With Us</title>
-    <style>
-        body {
-            background-image: url('https://images.pexels.com/photos/566378/pexels-photo-566378.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')
-        }
-    </style>
+    <link rel="stylesheet" href="css/forms-exercise-style.css">
 </head>
 <body>
 <nav>
