added styling to welcome.html and style.css

--- a/welcome.html
+++ b/welcome.html
@@ -4,55 +4,68 @@
     <meta charset="UTF-8">
     <title>Welcome</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-<section>
+<nav>
+    <div>
+    <img src="https://www.logolynx.com/images/logolynx/74/749a97dc8d2c0618ef12ec6276ff70ac.png">
+    <p class="cut-top-margin"><em>Sort of a Person Since 2014&copy;</em></p>
+    </div>
+    <div class="center">
     <h1 class="fancyheader">Welcome to Veridian Dynamics!</h1>
+    </div>
+</nav>
+<section>
     <p>At Veridian Dynamics <strong>we </strong>solve <em>your </em>problems with <strong>technology.</strong></p>
 </section>
-    <hr>
+<hr>
 <section>
     <div>
-    <h2>Core Values</h2>
-    <ul>
-        <li>Competence</li>
-        <li>Involvement</li>
-        <li>Technology</li>
-    </ul>
+        <h2 class="margin-bottom-five">Core Values</h2>
+        <ul class="margin-top-five">
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
     </div>
     <div>
-    <h2>Our Process</h2>
-    <ol>
-        <li>Plan</li>
-        <li>Evaluate</li>
-        <li>Implement</li>
-    </ol>
+        <h2 class="margin-bottom-five">Our Process</h2>
+        <ol class="margin-top-five">
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
     </div>
     <div>
-    <h2>2020 Vision</h2>
-    <ul>
-        <li>Become #1 in Technology</li>
-        <li>Increase Success by 20%</li>
-        <li>Increase Business by 30%</li>
-    </ul>
+        <h2 class="margin-bottom-five">2020 Vision</h2>
+        <ul class="margin-top-five">
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
     </div>
 </section>
-    <hr>
+<hr>
 <section>
-    <h2>Company Vision</h2>
+    <h2 class="margin-bottom-five">Company Vision</h2>
     <!---Hot linked because Casey did it first--->
     <div>
-    <img src="https://images.pexels.com/photos/1719233/pexels-photo-1719233.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="sampleimages" alt="Guy with a cool visor">
-    <img src="https://images.pexels.com/photos/2777898/pexels-photo-2777898.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="sampleimages"
-         alt="Girl pointing at augmented reality stuff">
+        <img src="https://images.pexels.com/photos/1719233/pexels-photo-1719233.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+             class="sampleimages" alt="Guy with a cool visor">
+        <img src="https://images.pexels.com/photos/2777898/pexels-photo-2777898.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+             class="sampleimages"
+             alt="Girl pointing at augmented reality stuff">
     </div>
     <div>
-    <img src="https://images.pexels.com/photos/2582937/pexels-photo-2582937.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="sampleimages" alt="Grey and yellow motherboard">
-    <img src="https://images.pexels.com/photos/3861964/pexels-photo-3861964.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="sampleimages" alt="Person coding and video chatting">
+        <img src="https://images.pexels.com/photos/2582937/pexels-photo-2582937.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+             class="sampleimages" alt="Grey and yellow motherboard">
+        <img src="https://images.pexels.com/photos/3861964/pexels-photo-3861964.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+             class="sampleimages" alt="Person coding and video chatting">
     </div>
 </section>
 <section>
-    <h2>Our Product</h2>
+    <h2 class="margin-bottom-five">Our Product</h2>
     <table>
         <tr>
             <th>Plan</th>
@@ -76,8 +89,8 @@
         </tr>
     </table>
     <br>
-    <p><em>All products come with our quality guarantee&trade;.</em></p>
+    <p class="margin-remove-bottom-top"><em>All products come with our quality guarantee&trade;.</em></p>
 </section>
-<h3><a href="#">Go to the top of the page.</a></h3>
+<h3 class="margin-top-five"><a href="#">Go to the top of the page.</a></h3>
 </body>
 </html>
