--- a/welcome.html
+++ b/welcome.html
@@ -16,7 +16,7 @@
     <h1 class="fancyheader">Welcome to Veridian Dynamics!</h1>
     </div>
 </nav>
-<section>
+<section class="center">
     <p>At Veridian Dynamics <strong>we </strong>solve <em>your </em>problems with <strong>technology.</strong></p>
 </section>
 <hr>
