fix colors and spacing

--- a/messages.html
+++ b/messages.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <div class="message message-info">
-        An informational message
+        <p>An informational message</p>
     </div>
     <div class="message message-success">
-        A success message
+        <p>A success message</p>
     </div>
     <div class="message message-warning">
-        A warning message
+        <p>A warning message</p>
     </div>
     <div class="message message-error">
-        An error message
+        <p>An error message</p>
     </div>
 
 </body>
