--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
 </nav>
 <section class="center">
     <p>At Veridian Dynamics <strong>we </strong>solve <em>your </em>problems with <strong>technology.</strong></p>
-    <div id="animation"></div>
+    <div id="animation" alt="dancing 'robot'"></div>
 </section>
 <hr>
 <section>
