--- a/twitter.html
+++ b/twitter.html
@@ -32,7 +32,6 @@
             Elliot Alderson
             <small class="text-muted">@fsociety</small>
         </h3>
-
         <p>Regular twitter user | ¯\_(ツ)_/¯</p>
 
         <ul class="profile-items">
@@ -61,7 +60,7 @@
         </div>
     </main>
     <aside class="who-to-follow">
-        <div class="media">
+        <div class="media" id="first-who">
             <h3>Who to follow</h3>
             <img class="media-image img-circle" src="https://randomuser.me/api/portraits/men/25.jpg" alt="Random user">
             <div class="media-body">
