add code to finish exercise

--- a/resume.html
+++ b/resume.html
@@ -17,62 +17,72 @@
             pig bacon. Corned beef ribeye fatback shank alcatra brisket.
         </p>
     </div>
-    <ul class="col-12 text-center" style="list-style: none">
-        <li>318-550-7510</li>
-        <li>jamesrobertwoodward@gmail.com</li>
-        <li>@jamesrobertwoodward</li>
-        <li>@jamesrw-git</li>
+    <ul class="col-12 row text-center" style="list-style: none">
+        <li class="col-md">318-550-7510</li>
+        <li class="col-md">jamesrobertwoodward@gmail.com</li>
+        <li class="col-md">@jamesrobertwoodward</li>
+        <li class="col-md">@jamesrw-git</li>
     </ul>
     <div class="col-11" style="background-color: yellowgreen; height: .2rem"></div>
 </section>
-<section class="pt-0 m-0">
-    <h4 class="text-primary ps-2">SKILLS AND ABILITIES</h4>
-    <ul>
-        <li>Tranquilizing</li>
-        <li>Netting</li>
-        <li>Cuddling</li>
-        <li>Petting</li>
-    </ul>
-    <h4 class="text-primary ps-2 pt-2">ACADEMIC</h4>
-    <p class="ps-2">Attended the prestigious <em>Totally A Real University School of Cat Herding</em>.
-    Studied feline behavior and physiology via a TedXTalk and MIT Online Courseware</p>
-    <h4 class="text-primary ps-2 pt-2">PROFESSIONAL EXPERIENCE</h4>
-    <p class="ps-2">
-        <em><strong>Tony's Feline Management</strong></em><br><br>
-        Assisted Tony in coaxing cats from under houses. Once filled an entire burlap
-        sack with feral cats.
-    </p>
-    <p class="ps-2">
-        <em><strong>SPCA</strong></em><br><br>
-        Head Feline Cuddle Agent for two straight years.
-    </p>
-    <h4 class="text-primary ps-2 pt-2">DEVELOPMENT PROJECTS</h4>
-    <p class="ps-2">
-        <em><strong>Are Cats Cuddly? A Thesis</strong></em><br><br>
-        Assisted Professor Farnsworth in developing a 276 page thesis about the
-        theoretical cuddlability of the average house cat.
-    </p>
-    <p class="ps-2">
-        <em><strong>Tuna for Strong Smol Bois</strong></em><br><br>
-        Fed unprocessed, raw tuna to a selection of seven smol bois
-        for two months and recorded growth, cuddle effects, and coat dynamics.
-    </p>
-    <p class="ps-2">
-        <em><strong>Cats are Dicks, Case Study</strong></em><br><br>
-        Arranged a series of experiments to determine whether cats are indeed
-        dicks or not. Results were inconclusive despite lots of things being broken
-        along the way.
-    </p>
-    <h4 class="text-primary ps-2 pt-2">AWARDS AND INVOLVEMENT</h4>
-    <p class="ps-2">
-        <em><strong>Cuddler of the Year</strong></em><br><br>
-        Voted best cuddles by Ricky (two year old male tabby)
-    </p>
-    <p class="ps-2">
-        <em><strong>Homeless Cat Support Group</strong></em><br><br>
-        Organize community donations and provided food, pets, and scritches to a
-        population of approximately 749 local homeless cats.
-    </p>
+<section class="pt-0 m-0 row d-flex">
+    <div class="container col-md-6">
+        <h4 class="text-primary ps-2">SKILLS AND ABILITIES</h4>
+        <ul class="md-row">
+            <li class="col-md-3">Tranquilizing</li>
+            <li class="col-md-3">Netting</li>
+            <li class="col-md-3">Cuddling</li>
+            <li class="col-md-3">Petting</li>
+        </ul>
+        <h4 class="text-primary ps-2 pt-2">ACADEMIC</h4>
+        <p class="ps-2">Attended the prestigious <em>Totally A Real University School of Cat Herding</em>.
+            Studied feline behavior and physiology via a TedXTalk and MIT Online Courseware</p>
+        <h4 class="text-primary ps-2 pt-2">PROFESSIONAL EXPERIENCE</h4>
+        <p class="ps-2">
+            <em><strong>Tony's Feline Management</strong></em><br><br>
+            Assisted Tony in coaxing cats from under houses. Once filled an entire burlap
+            sack with feral cats.
+        </p>
+        <p class="ps-2">
+            <em><strong>SPCA</strong></em><br><br>
+            Head Feline Cuddle Agent for two straight years.
+        </p>
+        <p class="ps-2">
+            <em><strong>Designer for Cats+ Inc.</strong></em><br><br>
+            Picked the cutest, smollest cats for inclusion on the Cats+ website.
+            Also, was Lead Color Chooser for fonts on the online checkout page.
+            Occasionally provided pets for VP of Operations, Steve the Cat.
+        </p>
+    </div>
+    <div class="container col-md-6">
+        <h4 class="text-primary ps-2">DEVELOPMENT PROJECTS</h4>
+        <p class="ps-2">
+            <em><strong>Are Cats Cuddly? A Thesis</strong></em><br><br>
+            Assisted Professor Farnsworth in developing a 276 page thesis about the
+            theoretical cuddlability of the average house cat.
+        </p>
+        <p class="ps-2">
+            <em><strong>Tuna for Strong Smol Bois</strong></em><br><br>
+            Fed unprocessed, raw tuna to a selection of seven smol bois
+            for two months and recorded growth, cuddle effects, and coat dynamics.
+        </p>
+        <p class="ps-2">
+            <em><strong>Cats are Dicks, A Case Study</strong></em><br><br>
+            Arranged a series of experiments to determine whether cats are indeed
+            dicks or not. Results were inconclusive despite lots of things being broken
+            along the way.
+        </p>
+        <h4 class="text-primary ps-2 pt-2">AWARDS AND INVOLVEMENT</h4>
+        <p class="ps-2">
+            <em><strong>Cuddler of the Year</strong></em><br><br>
+            Voted best cuddles by Ricky (two year old male tabby)
+        </p>
+        <p class="ps-2">
+            <em><strong>Homeless Cat Support Group</strong></em><br><br>
+            Organize community donations and provided food, pets, and scritches to a
+            population of approximately 749 local homeless cats.
+        </p>
+    </div>
 </section>
 
 
