add defuse-the-bom.html and code to complete exercise

--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
             pig bacon. Corned beef ribeye fatback shank alcatra brisket.
         </p>
     </div>
-    <ul class="col-12 row text-center" style="list-style: none">
+    <ul class="col-12 row " style="list-style: none">
         <li class="col-md">318-550-7510</li>
         <li class="col-md">jamesrobertwoodward@gmail.com</li>
         <li class="col-md">@jamesrobertwoodward</li>
