--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -33,6 +33,7 @@
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
         mainHeader.innerHTML = 'Javascript is Cool';
+
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById('sub-header');
 
@@ -41,7 +42,6 @@
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li');
-        console.log(listItems);
 
         // TODO: Set text color on every other list item to grey
         for (var i = 0; i < listItems.length; i++) {
@@ -51,14 +51,22 @@
         }
 
 
+
         // TODO: Set text color of li with dbid = 1 to blue
-
-
+        for (let i = 0; i <= listItems.length - 1; i++) {
+            if(listItems[i].getAttribute('data-dbid') === '1') {
+                listItems[i].style.color = 'blue';
+            }
+        }
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        // var subParagraphs = ;
+        var subParagraphs = document.querySelector('.sub-paragraph');
+        console.log(subParagraphs);
+
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+        subParagraphs.innerText = 'Mission Accomplished!';
+
     })();
 </script>
 </body>
