--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -30,18 +30,25 @@
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
         var mainHeader = document.getElementById('main-header');
+        //or
+        //var mainHeader = document.querySelector('#main-header');
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
         mainHeader.innerHTML = 'Javascript is Cool';
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById('sub-header');
+        //or
+        //var subHeader = document.querySelector('#sub-header');
 
         // TODO: Set the text color of subHeader to blue
         subHeader.style.color = '#1262e3';
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li');
+        //or
+        //var listItems = document.querySelectorAll('li');
+        //^^ returns a NodeList
 
         // TODO: Set text color on every other list item to grey
         for (var i = 0; i < listItems.length; i++) {
@@ -49,23 +56,26 @@
                 listItems[i].style.color = '#a3afc2';
             }
         }
+        //or (probably the better, safer way)
+        //for (let i = 0; i < listItems.length; i += 2){
+        //  listItems[i].style.color = '#a3afc2';
+        //}
 
-
-
-        // TODO: Set text color of li with dbid = 1 to blue
+        // TODO: Set text color of li with data-dbid = 1 to blue
         for (let i = 0; i <= listItems.length - 1; i++) {
             if(listItems[i].getAttribute('data-dbid') === '1') {
                 listItems[i].style.color = 'blue';
             }
         }
 
+
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        var subParagraphs = document.querySelector('.sub-paragraph');
+        var subParagraphs = document.querySelectorAll('.sub-paragraph');
         console.log(subParagraphs);
 
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs.innerText = 'Mission Accomplished!';
+        subParagraphs[0].innerText = 'Mission Accomplished!';
 
     })();
 </script>
