--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -62,7 +62,7 @@
         //}
 
         // TODO: Set text color of li with data-dbid = 1 to blue
-        for (let i = 0; i <= listItems.length - 1; i++) {
+        for (let i = 0; i < listItems.length; i++) {
             if(listItems[i].getAttribute('data-dbid') === '1') {
                 listItems[i].style.color = 'blue';
             }
